@@ -1,5 +1,7 @@
 Revision history for Web::ComposableRequest
 
+          - Adds session_expired callback
+
 0.11.1    2016-06-18 00:25:07
           - Adds referer to base class
 
